added plurals lesson and made nav buttons better

--- a/lessons/basics/01_basics_1.html
+++ b/lessons/basics/01_basics_1.html
@@ -12,8 +12,9 @@ title: Elisa's Duo Polski - Polish basics 1
     </div>
 
     <div class="nav-buttons">
+        <div class="nav-btn"><a href="/"> ← Home </a></div>
         <div class="nav-btn"><a href="/lessons#basics">Lessons: Basics</a></div>
-        <div class="nav-btn"><a href="/lessons/basics/02_basics_2.html">Basics 2</a></div>
+        <div class="nav-btn"><a href="/lessons/basics/02_basics_2.html">Basics 2 → </a></div>
     </div>
     
     <div class="regular">
@@ -324,8 +325,9 @@ title: Elisa's Duo Polski - Polish basics 1
     </div>
 
     <div class="nav-buttons">
-        <div class="nav-btn"><a href="/lessons#basics">Basics</a></div>
-        <div class="nav-btn"><a href="/lessons/basics/02_basics_2.html">Basics 2</a></div>
+        <div class="nav-btn"><a href="/"> ← Home </a></div>
+        <div class="nav-btn"><a href="/lessons#basics">Lessons: Basics</a></div>
+        <div class="nav-btn"><a href="/lessons/basics/02_basics_2.html">Basics 2 → </a></div>
     </div>
 
 </div><!-- /.blurb -->
