--- a/lessons/basics/02_basics_2.html
+++ b/lessons/basics/02_basics_2.html
@@ -12,9 +12,9 @@ title: Elisa's Duo Polski - Polish basics 2
     </div>
     
     <div class="nav-buttons">
-        <div class="nav-btn"><a href="/lessons/basics/01_basics_1.html">Basics 1</a></div>
+        <div class="nav-btn"><a href="/lessons/basics/01_basics_1.html"> ← Basics 1</a></div>
         <div class="nav-btn"><a href="/lessons#basics">Lessons: Basics</a></div>
-        <div class="nav-btn"><a href="/lessons/basics/03_phrases.html">Phrases</a></div>
+        <div class="nav-btn"><a href="/lessons/basics/03_phrases.html">Phrases → </a></div>
     </div>
 
     <div class="regular">
@@ -236,9 +236,9 @@ title: Elisa's Duo Polski - Polish basics 2
     </div>
 
     <div class="nav-buttons">
-        <div class="nav-btn"><a href="/lessons/basics/01_basics_1.html">Basics 1</a></div>
+        <div class="nav-btn"><a href="/lessons/basics/01_basics_1.html"> ← Basics 1</a></div>
         <div class="nav-btn"><a href="/lessons#basics">Lessons: Basics</a></div>
-        <div class="nav-btn"><a href="/lessons/basics/03_phrases.html">Phrases</a></div>
+        <div class="nav-btn"><a href="/lessons/basics/03_phrases.html">Phrases → </a></div>
     </div>
     
 </div><!-- /.blurb -->
