--- a/lessons/basics/03_phrases.html
+++ b/lessons/basics/03_phrases.html
@@ -12,9 +12,9 @@ title: Elisa's Duo Polski - Basic Phrases
     </div>
 
     <div class="nav-buttons">
-        <div class="nav-btn"><a href="/lessons/basics/02_basics_2.html">Basics 2</a></div>
+        <div class="nav-btn"><a href="/lessons/basics/02_basics_2.html"> ← Basics 2</a></div>
         <div class="nav-btn"><a href="/lessons#basics">Lessons: Basics</a></div>
-        <div class="nav-btn"><a href="/lessons/basics/04_animals_1.html">Animals 1</a></div>
+        <div class="nav-btn"><a href="/lessons/basics/04_animals_1.html">Animals 1 → </a></div>
     </div>
     
     <div class="regular">
@@ -147,9 +147,9 @@ title: Elisa's Duo Polski - Basic Phrases
     </div>
     
     <div class="nav-buttons">
-        <div class="nav-btn"><a href="/lessons/basics/02_basics_2.html">Basics 2</a></div>
+        <div class="nav-btn"><a href="/lessons/basics/02_basics_2.html"> ← Basics 2</a></div>
         <div class="nav-btn"><a href="/lessons#basics">Lessons: Basics</a></div>
-        <div class="nav-btn"><a href="/lessons/basics/04_animals_1.html">Animals 1</a></div>
+        <div class="nav-btn"><a href="/lessons/basics/04_animals_1.html">Animals 1 → </a></div>
     </div>
 
 </div><!-- /.blurb -->
