--- a/lessons/basics/04_animals_1.html
+++ b/lessons/basics/04_animals_1.html
@@ -12,9 +12,9 @@ title: Elisa's Duo Polski - Animals 1
     </div>
 
     <div class="nav-buttons">
-        <div class="nav-btn"><a href="/lessons/basics/03_phrases.html">Phrases</a></div>
+        <div class="nav-btn"><a href="/lessons/basics/03_phrases.html"> ← Phrases</a></div>
         <div class="nav-btn"><a href="/lessons#basics">Lessons: Basics</a></div>
-        <div class="nav-btn"><a href="/lessons/basics/05_food_1.html">Food 1</a></div>
+        <div class="nav-btn"><a href="/lessons/basics/05_food_1.html">Food 1 → </a></div>
     </div>
     
     <div class="regular">
@@ -91,9 +91,9 @@ title: Elisa's Duo Polski - Animals 1
     </div>
 
     <div class="nav-buttons">
-        <div class="nav-btn"><a href="/lessons/basics/03_phrases.html">Phrases</a></div>
+        <div class="nav-btn"><a href="/lessons/basics/03_phrases.html"> ← Phrases</a></div>
         <div class="nav-btn"><a href="/lessons#basics">Lessons: Basics</a></div>
-        <div class="nav-btn"><a href="/lessons/basics/05_food_1.html">Food 1</a></div>
+        <div class="nav-btn"><a href="/lessons/basics/05_food_1.html">Food 1 → </a></div>
     </div>
     
 </div><!-- /.blurb -->
