--- a/lessons/basics/06_defining.html
+++ b/lessons/basics/06_defining.html
@@ -12,9 +12,9 @@ title: Elisa's Duo Polski - Defining
     </div>
 
     <div class="nav-buttons">
-        <div class="nav-btn"><a href="/lessons/basics/05_food_1.html">Food 1</a></div>
+        <div class="nav-btn"><a href="/lessons/basics/05_food_1.html"> ← Food 1</a></div>
         <div class="nav-btn"><a href="/lessons#basics">Lessons: Basics</a></div>
-        <div class="nav-btn"><a href="/lessons/basics/07_demonstrating.html">Demonstrating</a></div>
+        <div class="nav-btn"><a href="/lessons/basics/07_demonstrating.html">Demonstrating → </a></div>
     </div>
     
     <div class="regular">
@@ -265,9 +265,9 @@ title: Elisa's Duo Polski - Defining
     </div>
 
     <div class="nav-buttons">
-        <div class="nav-btn"><a href="/lessons/basics/05_food_1.html">Food 1</a></div>
+        <div class="nav-btn"><a href="/lessons/basics/05_food_1.html"> ← Food 1</a></div>
         <div class="nav-btn"><a href="/lessons#basics">Lessons: Basics</a></div>
-        <div class="nav-btn"><a href="/lessons/basics/07_demonstrating.html">Demonstrating</a></div>
+        <div class="nav-btn"><a href="/lessons/basics/07_demonstrating.html">Demonstrating → </a></div>
     </div>
     
 </div><!-- /.blurb -->
