--- a/lessons/basics/08_adjectives_1.html
+++ b/lessons/basics/08_adjectives_1.html
@@ -12,9 +12,9 @@ title: Elisa's Duo Polski - Adjectives 1
     </div>
 
     <div class="nav-buttons">
-        <div class="nav-btn"><a href="/lessons/basics/07_demonstrating.html">Demonstrating</a></div>
+        <div class="nav-btn"><a href="/lessons/basics/07_demonstrating.html"> ← Demonstrating</a></div>
         <div class="nav-btn"><a href="/lessons#basics">Lessons: Basics</a></div>
-        <div class="nav-btn"><a href="/lessons/checkpoint_1/09_plurals.html">Plurals</a></div>
+        <div class="nav-btn"><a href="/lessons/checkpoint_1/09_plurals.html">Plurals → </a></div>
     </div>
     
     <div class="regular">
@@ -204,9 +204,9 @@ title: Elisa's Duo Polski - Adjectives 1
     </div>
 
     <div class="nav-buttons">
-        <div class="nav-btn"><a href="/lessons/basics/07_demonstrating.html">Demonstrating</a></div>
+        <div class="nav-btn"><a href="/lessons/basics/07_demonstrating.html"> ← Demonstrating</a></div>
         <div class="nav-btn"><a href="/lessons#basics">Lessons: Basics</a></div>
-        <div class="nav-btn"><a href="/lessons/checkpoint_1/09_plurals.html">Plurals</a></div>
+        <div class="nav-btn"><a href="/lessons/checkpoint_1/09_plurals.html">Plurals → </a></div>
     </div>
     
 </div><!-- /.blurb -->
