--- a/lessons/checkpoint_1/09_plurals.html
+++ b/lessons/checkpoint_1/09_plurals.html
@@ -12,9 +12,9 @@ title: Elisa's Duo Polski - Plurals
     </div>
 
     <div class="nav-buttons">
-        <div class="nav-btn"><a href="/lessons/basics/08_adjectives_1.html">Adjectives 1</a></div>
+        <div class="nav-btn"><a href="/lessons/basics/08_adjectives_1.html"> ← Adjectives 1</a></div>
         <div class="nav-btn"><a href="/lessons#checkpoint_1">Checkpoint 1</a></div>
-        <div class="nav-btn"><a href="/lessons/checkpoint_1/10_clothing.html">Clothing</a></div>
+        <div class="nav-btn"><a href="/lessons/checkpoint_1/10_clothing.html">Clothing → </a></div>
     </div>
     
     <div class="regular">
@@ -79,11 +79,235 @@ title: Elisa's Duo Polski - Plurals
         </table>
 
     </div>
+    <div class="regular">
+
+        <h2> Nominative Plural - Liczba mnoga mianownik </h2>
+
+        <h3> Nominative Plural Nouns </h3>
+
+        <p>Plurals of nouns have many different endings so it would be better to just memorize the words by themselves. However, a few patterns we can see:
+
+            Ending in -<span class="red-text">y</span> (sometimes replacing -<span class="blue-text">a</span>):
+            Kobiet<span class="blue-text">a</span> - Kobiet<span class="red-text">y</span>
+            Kot - Kot<span class="red-text">y</span>
+
+            Ending in -<span class="red-text">y</span> after -<span class="blue-text">ie</span>:
+            Chłop<span class="blue-text">ie</span>c - Chłopc<span class="red-text">y</span>
+            P<span class="blue-text">ie</span>s - Ps<span class="red-text">y</span>
+
+            Ending in -<span class="red-text">i</span> replacing -<span class="blue-text">a</span>:
+            Dziewczynk<span class="blue-text">a</span> - dziewczynk<span class="red-text">i</span>
+            Mężczyzn<span class="blue-text">a</span> - mężczyźn<span class="red-text">i</span>
+
+            Ending in -<span class="red-text">ie</span> after a soft consonant (<span class="blue-text">ńść…</span>) and losing the diacritic
+            Ko<span class="blue-text">ń</span> - Ko<span class="red-text">nie</span>
+            Sło<span class="blue-text">ń</span> - sło<span class="red-text">nie</span> 
+
+            Ending in -<span class="blue-text">o</span> changes to -<span class="red-text">a</span>:
+            Jabłk<span class="blue-text">o</span> - jabłk<span class="red-text">a</span> 
+            Ciasteczk<span class="blue-text">o</span> - ciasteczk<span class="red-text">a</span>
+
+            And so on, but there’s many rules so let’s better remember each word.</p>
+
+        <span class="section"> Practice exercises - Ćwiczyć ćwiczenia </span>
+
+        <p><span class="blue-text">Ryby</span> to mała zwierzęta. - Fish are small animals.
+            <span class="blue-text">Dziewczynki</span> lubią konie. - The girls like horses.
+            <span class="blue-text">Dziewczynki</span> lubią psy i koty.  - Girls like dogs and cats.*
+            <span class="blue-text">Psy</span> jedzą jabłka. - The dogs are eating apples.
+            To są <span class="blue-text">dzieci</span>. - These are children.
+
+            Notice that just like in singular “To jest + noun" will be in nominative, "To są + noun” will also be in nominative.
+
+            *For some reason in English “cats and dogs” as in “it’s raining cats and dogs” is used in this order more often than the opposite. In Poland, most people would say “psy i koty”, while the opposite order is not incorrect, it is said less by the general public.</p>
+
+        <h3> Nominative Plural Adjectives </h3>
+
+        <p>Declensions in adjectives are split between Masculine-personal plural and non-masculine-personal plural. What this means is : if it’s a human and it’s male, it’s masculine personal; otherwise it is non-masculine personal.</p>
+
+        <h4> Non-masculine personal (<span class="violet-text">niemęskoosobowy</span>) nominative plural adjectives </h4>
+
+        <p>Non-masculine personal (niemęskoosobowy) (abbreviated nmp.) plural (pl.) adjectives will end in -e in nominative. So anything that’s not a male human, will have adjectives ending with -e.
+
+            Konie są duż<span class="red-text">e</span> - The horses are big
+            Jabłka są smaczn<span class="red-text">e</span> - The apples are tasty
+            Now<span class="red-text">e</span> dziewczynki - New girls
+            Star<span class="red-text">e</span> psy - old dogs</p>
+
+        <h4> Masculine personal (męski osobowy) nominative plural adjectives </h4>
+
+        <p>On the other hand, masculine personal (<span class="violet-text">męski osobowy</span>) (abbreviated mp.) plural adjectives will end in -i , and if there’s an -r before it, it changes to -rzy.
+
+            -<span class="blue-text">ry</span> changes to to -<span class="red-text">rzy</span>:
+            Dob<span class="red-text">rzy</span> ludzie - Good people. (s. dobry)
+            Oni są sta<span class="red-text">rzy</span> - They are old. (s. stary)
+
+            Ł,ż, ending in -i and loose the diacritics:
+            Ź<span class="red-text">li</span> mężczyźni - bad men (s. z<span class="blue-text">ły</span>)
+            Du<span class="red-text">zi</span> chłopcy i ma<span class="red-text">li</span> chłopcy - big boys and small boys (s. du<span class="blue-text">ży</span> s. ma<span class="blue-text">ły</span>)
+
+            Ending in -<span class="red-text">i</span>:
+            Now<span class="red-text">i</span> chłopcy - new boys (s. now<span class="blue-text">y</span>)
+            Smaczn<span class="red-text">i</span> chłopcy - tasty boys (s. smaczn<span class="blue-text">y</span>)</p>
+
+        <span class="section"> Practice exercises - Ćwiczyć ćwiczenia </span>
+
+        <p>Duże kobiety, duzi mężczyźni i duże dzieci - Big women, big men and big children
+            Mali chłopcy, małe dziewczynki - Little boys, little girls.
+            Są starzy - They are old (male they)</p>
+
+    </div>
+
+    <div class="regular">
+
+        <h2> Accusative Plural - Liczba mnoga biernik </h2>
+
+        <h3> Accusative Plural Nouns </h3>
+
+        <p>Duolingo introduces a few examples of Accusative plural nouns later as you level up in this section, but just for reference:
+            <a href="https://mowicpopolsku.com/polish-grammar/cases/accusative/#plural">https://mowicpopolsku.com/polish-grammar/cases/accusative/#plural</a>
+
+            What it says is that similar to the adjectives, nouns get split into Masculine personal and Non-masculine personal nouns.
+        </p>
+
+        <h4> Non-masculine personal accusative plural nouns </h4>
+
+        <p>Non-masculine personal nouns, everything that is not a male human will have the same declension as the Nominative, so basically the same as the dictionary form. Duolingo has been showing us examples before without us really noticing:
+
+            Dziewczynka ma <span class="blue-text">ciasteczka</span> - The girl has cookies
+
+            This simple example shows us the accusative plural being the same as nominative, but we can use it from now on knowing for certain how it works:
+
+            Chłopcy mają <span class="blue-text">psy</span> - The boys have dogs.
+            Mężczyźni jedzą <span class="blue-text">jajka</span> - The men are eating eggs.
+            Mamy <span class="blue-text">koty</span>. - We have cats.
+
+            Now, Masculine personal pronouns are the same as in genitive, which we haven't seen yet, and Duolingo will probably not introduce yet.</p>
+
+        <h3> Accusative Plural Adjectives </h3>
+
+        <p>Like I said before, duolingo will introduce accusative plural adjectives in masculine personal later on, as it is the same as genitive, which we haven't seen. For reference:
+        <a href="https://mowicpopolsku.com/polish-grammar/cases/accusative/#adjective-plural">https://mowicpopolsku.com/polish-grammar/cases/accusative/#adjective-plural</a>
+
+        For now, let's see non-masculine personal plural:
+        Accusative adjectives in nmp pl end in -<span class="red-text">e</span>.
+
+        Nowi chłopcy mają star<span class="red-text">e</span> psy - The new boys have old dogs.
+        Tamta kobieta ma duż<span class="red-text">e</span> konie - That woman has big horses.
+
+        Accusative adjectives in mp pl are -ych/ -ich.</p>
+
+    </div>
+
+    <div class="regular">
+
+        <h2> Instrumental Plural - Liczba Mnoga Narzędnik </h2>
+
+        <p>If you remember correctly, instrumental case is necessary when something is being defined as something else. We will now see them in plural.</p>
+
+        <h3 > Instrumental Plural Nouns </h3>
+
+        <p><a href="https://mowicpopolsku.com/polish-grammar/cases/instrumental/#nouns-plural">https://mowicpopolsku.com/polish-grammar/cases/instrumental/#nouns-plural</a>
+
+        All nouns, regardless of gender, change from their ending in nominative plural to -<span class="red-text">ami</span>.
+
+        Oni są mężczyzn<span class="red-text">ami</span> - They are men. (Mężczyźn<span class="blue-text">i</span>)
+        Jesteśmy kobiet<span class="red-text">ami</span> - We are women. (Kobiet<span class="blue-text">y</span>)
+
+        A few exceptions exist, even in this Duolingo lesson. Some words don't end in -ami, but instead remove the ending vowels, add a diacritic to the last consonant and end in -mi. 
+
+        Wy jesteście lud<span class="red-text">źmi</span> - You are people. (Lud<span class="blue-text">zie</span>)
+        Nie jesteśmy dzie<span class="red-text">ćmi</span>! - We aren’t children! (Dzie<span class="blue-text">ci</span>)</p>
+
+        <span class="section"> Practice exercises - Ćwiczyć ćwiczenia </span>
+
+        <p>Chłopcy są dziećmi - Boys are children
+        One są ludźmi i my jesteśmy ludźmi - They are people and we are people.
+        Wy jesteście ludźmi - You are people
+        Jesteście dziećmi? - Are you children?
+        Wy jesteście mężczyznami, my jesteśmy kobietami - You are men, we are women.
+        One są kobietami - They are women.</p>
+
+        <h3> Instrumental Plural Adjectives - Narzędnik </h3>
+
+        <p><a href="https://mowicpopolsku.com/polish-grammar/cases/instrumental/#adjectives-plural">https://mowicpopolsku.com/polish-grammar/cases/instrumental/#adjectives-plural</a>
+
+        I haven’t seen these show up in Duolingo, but well, we’re already here aren’t we?
+
+        All adjectives in the instrumental case in plural, regardless of gender, end in -ymi, except for adjectives that end in -g or -k, in which case they end in -imi.
+
+        Oni są dobr<span class="red-text">ymi</span> ludźmi - They are good people. 
+        Mój brat jeździ dro<span class="red-text">gimi</span> samochodami. - My brother drives expensive cars.</p>
+
+    </div>
+
+    <div class="regular">
+
+        <h2> Demonstrative Pronouns in Plural </h2>
+
+        <p>In a previous lesson, we learned how to point at things: Ten, ta, to, tamten, tamta, tamto.
+We also learned the way they change in accusative: Ten, tego, tę, to, tamten, tamtego, tamtą, tamto. They would mean “This” or “That” depending on the distance, with the ones starting with tam- being further away. However we only studied them in singular back then, so it’s time for the plurals as well. In English it would be “These” and “Those”.</p>
+
+        <h3> Nominative - Mianownik </h3>
+
+        <p>For plurals the split will be between masculine personal (Męskoosobowy) and non-masculine personal (Niemęskoosobowy). See the table below. As before, the guide is here:
+
+        <a href="https://www.clozemaster.com/blog/polish-demonstrative-pronouns/">https://www.clozemaster.com/blog/polish-demonstrative-pronouns/</a></p>
+
+        <table>
+            <thead>
+              <tr>
+                <th colspan="4" style="text-align:center;">Plural - Liczba mnoga<br><br>Nominative - Mianownik</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <th>Distance to the<br> person speaking</th>
+                <th>Gender<br><br>Rodzaj</th>
+                <th>Demonstrative Pronoun<br><br>Zaimek wskazujący</th>
+                <th>In English<br><br>Po angielsku</th>
+              </tr>
+              <tr>
+                <td rowspan="2">Closer to the person<br><br>x ---&gt; y</td>
+                <td>♂ Męskoosobowy <br> ♂ Male Personal</td>
+                <td>ci</td>
+                <td style="text-align: left; padding-left: 0.5em;">these ♂</td>
+              </tr>
+              <tr>
+                <td>⚲ Niemęskoosobowy <br> ⚲ Non-Male Personal </td>
+                <td>te</td>
+                <td style="text-align: left; padding-left: 0.5em;">these ⚲</td>
+              </tr>
+                <td rowspan="2">Farther from the person<br><br>x -----------&gt; y</td>
+                <td>♂ Męskoosobowy <br> ♂ Male Personal</td>
+                <td>tamci</td>
+                <td style="text-align: left; padding-left: 0.5em;">those ♂</td>
+              </tr>
+              <tr>
+                <td>⚲ Niemęskoosobowy <br> ⚲ Non-Male Personal </td>
+                <td>tamte</td>
+                <td style="text-align: left; padding-left: 0.5em;">those ⚲</td>
+              </tr>
+            </tbody>
+        </table>
+
+        <span class="section"> Practice exercises - Ćwiczyć ćwiczenia </span>
+
+        <p><span class="blue-text">Ci</span> ludzie jedzą kaczki - These people eat ducks
+            <span class="blue-text">Tamci</span> mali chłopcy i <span class="blue-text">tamte</span> małe dziewczynki - Those little boys and those little girls
+            <span class="blue-text">Tamte</span> kobiety jedzą posiłek - Those women are eating a meal
+            <span class="blue-text">Ci</span> mężczyźni lubią jabłka - These men like apples. 
+            <span class="blue-text">Te</span> kanapki są smaczne - These sandwiches are tasty.
+            <span class="blue-text">Ci</span> chłopcy mają kanapkę - These boys have a sandwich.
+            <span class="blue-text">Tamte</span> kobiety jedzą ciasteczka - Those women are eating cookies.
+            <span class="blue-text">Te</span> kobiety i tamten mężczyzna jedzą obiad - These women and that man are eating lunch.</p>
+
+    </div>
 
     <div class="nav-buttons">
-        <div class="nav-btn"><a href="/lessons/basics/08_adjectives_1.html">Adjectives 1</a></div>
+        <div class="nav-btn"><a href="/lessons/basics/08_adjectives_1.html"> ← Adjectives 1</a></div>
         <div class="nav-btn"><a href="/lessons#checkpoint_1">Checkpoint 1</a></div>
-        <div class="nav-btn"><a href="/lessons/checkpoint_1/10_clothing.html">Clothing</a></div>
+        <div class="nav-btn"><a href="/lessons/checkpoint_1/10_clothing.html">Clothing → </a></div>
     </div>
     
 </div><!-- /.blurb -->
