--- a/lessons/basics/05_food_1.html
+++ b/lessons/basics/05_food_1.html
@@ -12,9 +12,9 @@ title: Elisa's Duo Polski - Food 1
     </div>
 
     <div class="nav-buttons">
-        <div class="nav-btn"><a href="/lessons/basics/04_animals_1.html">Animals 1</a></div>
+        <div class="nav-btn"><a href="/lessons/basics/04_animals_1.html"> ← Animals 1</a></div>
         <div class="nav-btn"><a href="/lessons#basics">Lessons: Basics</a></div>
-        <div class="nav-btn"><a href="/lessons/basics/06_defining.html">Defining</a></div>
+        <div class="nav-btn"><a href="/lessons/basics/06_defining.html">Defining → </a></div>
     </div>
     
     <div class="regular">
@@ -158,9 +158,9 @@ title: Elisa's Duo Polski - Food 1
     </div>
 
     <div class="nav-buttons">
-        <div class="nav-btn"><a href="/lessons/basics/04_animals_1.html">Animals 1</a></div>
+        <div class="nav-btn"><a href="/lessons/basics/04_animals_1.html"> ← Animals 1</a></div>
         <div class="nav-btn"><a href="/lessons#basics">Lessons: Basics</a></div>
-        <div class="nav-btn"><a href="/lessons/basics/06_defining.html">Defining</a></div>
+        <div class="nav-btn"><a href="/lessons/basics/06_defining.html">Defining → </a></div>
     </div>
 
 </div><!-- /.blurb -->
