--- a/lessons/basics/07_demonstrating.html
+++ b/lessons/basics/07_demonstrating.html
@@ -12,9 +12,9 @@ title: Elisa's Duo Polski - Demonstrating
     </div>
 
     <div class="nav-buttons">
-        <div class="nav-btn"><a href="/lessons/basics/06_defining.html">Defining</a></div>
+        <div class="nav-btn"><a href="/lessons/basics/06_defining.html"> ← Defining</a></div>
         <div class="nav-btn"><a href="/lessons#basics">Lessons: Basics</a></div>
-        <div class="nav-btn"><a href="/lessons/basics/08_adjectives_1.html">Adjectives 1</a></div>
+        <div class="nav-btn"><a href="/lessons/basics/08_adjectives_1.html">Adjectives 1 → </a></div>
     </div>
     
     <div class="regular">
@@ -231,9 +231,9 @@ title: Elisa's Duo Polski - Demonstrating
     </div>
 
     <div class="nav-buttons">
-        <div class="nav-btn"><a href="/lessons/basics/06_defining.html">Defining</a></div>
+        <div class="nav-btn"><a href="/lessons/basics/06_defining.html"> ← Defining</a></div>
         <div class="nav-btn"><a href="/lessons#basics">Lessons: Basics</a></div>
-        <div class="nav-btn"><a href="/lessons/basics/08_adjectives_1.html">Adjectives 1</a></div>
+        <div class="nav-btn"><a href="/lessons/basics/08_adjectives_1.html">Adjectives 1 → </a></div>
     </div>
     
 </div><!-- /.blurb -->
